--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "mongo_uploads",
+  "name": "filestorage",
   "version": "1.0.0",
-  "description": "Simple app to upload files to MongoDB",
+  "description": "Working with storage",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/juhuyoon/filestorage.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/juhuyoon/filestorage/issues"
+  },
+  "homepage": "https://github.com/juhuyoon/filestorage#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "ejs": "^2.5.7",
-    "express": "^4.16.2",
+    "ejs": "^2.5.9",
+    "express": "^4.16.3",
     "gridfs-stream": "^1.1.1",
     "method-override": "^2.3.10",
-    "mongoose": "^5.0.9",
+    "mongoose": "^5.0.15",
     "multer": "^1.3.0",
-    "multer-gridfs-storage": "^3.0.0"
+    "multer-gridfs-storage": "^3.0.1",
   },
   "devDependencies": {
-    "nodemon": "^1.17.1"
+    "nodemon": "^1.17.3"
   }
 }
