--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "method-override": "^2.3.10",
     "mongoose": "^5.0.15",
     "multer": "^1.3.0",
-    "multer-gridfs-storage": "^3.0.1",
+    "multer-gridfs-storage": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
